Can now navigate from page to page and designate start and end pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,9 @@
 
 {% block body %}
 
-  <p>This is wikiball.</p>
-  <button onclick="window.location='{{ url_for('race') }}'">race</button>
-  <button onclick="window.location='{{ url_for('clicks') }}'">clicks</button>
+<p>This is wikiball.</p>
+<button onclick="window.location='{{ url_for('race') }}'">race</button>
+<button onclick="window.location='{{ url_for('clicks') }}'">clicks</button>
+<button onclick="window.location='{{ url_for('start') }}'">clicks</button>
 
 {% endblock %}
