--- a/static/race.css
+++ b/static/race.css
@@ -1,4 +1,19 @@
+body {
+    background-color: green;
+    margin: 0px;
+}
+
+iframe {
+    border: 0;
+    width: 100%;
+    height: 100%;
+}
+
 #wiki_page {
-    height: 500px;
-    width: 500px;
+    width: 100%;
+    height: 100%;
+}
+
+#game {
+    margin: 10px;
 }
